{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 939,
  "lineage": "24cd2239-1927-1d1d-c1de-56f55c68ae87",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ip_instancia-publica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c4d82b42dda8d5af",
            "association_id": "eipassoc-0d7ba4433c804f137",
            "domain": "vpc",
            "id": "eipalloc-0c4d82b42dda8d5af",
            "instance": "i-0372b5aad886a82eb",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0161776948167ac83",
            "private_dns": "ip-10-0-0-72.ec2.internal",
            "private_ip": "10.0.0.72",
            "public_dns": "ec2-44-217-25-5.compute-1.amazonaws.com",
            "public_ip": "44.217.25.5",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "codetech-ip-publico"
            },
            "tags_all": {
              "Name": "codetech-ip-publico"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_privada",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f9de6e2d2f067fca",
            "arn": "arn:aws:ec2:us-east-1:767485778798:instance/i-0139d806fcf2fe427",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0139d806fcf2fe427",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "codetech_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fd3d0d985d706a94",
            "private_dns": "ip-10-0-1-195.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.195",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f792bb87141ca432",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-05e27e8fe170968f7"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00138dc22317f2dc5",
            "tags": {
              "Name": "codetech-be"
            },
            "tags_all": {
              "Name": "codetech-be"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05e27e8fe170968f7"
            ]
          },
          "dependencies": [
            "module.instances.aws_key_pair.codetech_key",
            "module.instances.tls_private_key.ssh_key",
            "module.network.aws_security_group.security_private",
            "module.network.aws_security_group.security_public",
            "module.network.aws_subnet.subnet_private",
            "module.network.aws_vpc.codetech_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_publica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f9de6e2d2f067fca",
            "arn": "arn:aws:ec2:us-east-1:767485778798:instance/i-0453b2937d7c3df15",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0453b2937d7c3df15",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "codetech_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d0d47a7511c2262c",
            "private_dns": "ip-10-0-0-193.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.193",
            "public_dns": "ec2-13-217-95-185.compute-1.amazonaws.com",
            "public_ip": "13.217.95.185",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0295a7c6d95f3856d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0d846f31e404eb286"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00a7b15ea503038a7",
            "tags": {
              "Name": "codetech-publica"
            },
            "tags_all": {
              "Name": "codetech-publica"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d846f31e404eb286"
            ]
          },
          "dependencies": [
            "module.instances.aws_instance.ec2_privada",
            "module.instances.aws_key_pair.codetech_key",
            "module.instances.tls_private_key.ssh_key",
            "module.network.aws_security_group.security_private",
            "module.network.aws_security_group.security_public",
            "module.network.aws_subnet.subnet_private",
            "module.network.aws_subnet.subnet_publica",
            "module.network.aws_vpc.codetech_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fd24479b20ae6793",
            "association_id": "eipassoc-0026bd22a33a87bd2",
            "domain": "vpc",
            "id": "eipalloc-0fd24479b20ae6793",
            "network_border_group": "us-east-1",
            "network_interface": "eni-09beada5aea6b16e4",
            "private_dns": "ip-10-0-0-93.ec2.internal",
            "private_ip": "10.0.0.93",
            "public_dns": "ec2-34-201-237-28.compute-1.amazonaws.com",
            "public_ip": "34.201.237.28",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "codetech-nat-elasticIP"
            },
            "tags_all": {
              "Name": "codetech-nat-elasticIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "codetech_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767485778798:internet-gateway/igw-0638418e251f88d36",
            "id": "igw-0638418e251f88d36",
            "owner_id": "767485778798",
            "tags": {
              "Name": "codetech-internet-gateway"
            },
            "tags_all": {
              "Name": "codetech-internet-gateway"
            },
            "vpc_id": "vpc-0af66dac02f73b954"
          },
          "dependencies": [
            "module.network.aws_vpc.codetech_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fd24479b20ae6793",
            "association_id": "eipassoc-0026bd22a33a87bd2",
            "connectivity_type": "public",
            "id": "nat-063ea68108b54b7ff",
            "network_interface_id": "eni-09beada5aea6b16e4",
            "private_ip": "10.0.0.93",
            "public_ip": "34.201.237.28",
            "subnet_id": "subnet-00a7b15ea503038a7",
            "tags": {
              "Name": "codetech-nat-gateway"
            },
            "tags_all": {
              "Name": "codetech-nat-gateway"
            }
          },
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_subnet.subnet_publica",
            "module.network.aws_vpc.codetech_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767485778798:route-table/rtb-04733671943049c5e",
            "id": "rtb-04733671943049c5e",
            "owner_id": "767485778798",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-063ea68108b54b7ff",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "codetech-rt-privada"
            },
            "tags_all": {
              "Name": "codetech-rt-privada"
            },
            "timeouts": null,
            "vpc_id": "vpc-0af66dac02f73b954"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_subnet.subnet_publica",
            "module.network.aws_vpc.codetech_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767485778798:route-table/rtb-0376f396df6017e4f",
            "id": "rtb-0376f396df6017e4f",
            "owner_id": "767485778798",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0638418e251f88d36",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "codetech-rt-publica"
            },
            "tags_all": {
              "Name": "codetech-rt-publica"
            },
            "timeouts": null,
            "vpc_id": "vpc-0af66dac02f73b954"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.codetech_igw",
            "module.network.aws_vpc.codetech_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec535828a0d56b37",
            "route_table_id": "rtb-04733671943049c5e",
            "subnet_id": "subnet-00138dc22317f2dc5"
          },
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_route_table.private_route_table",
            "module.network.aws_subnet.subnet_private",
            "module.network.aws_subnet.subnet_publica",
            "module.network.aws_vpc.codetech_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dfc044a29398ee98",
            "route_table_id": "rtb-0376f396df6017e4f",
            "subnet_id": "subnet-00a7b15ea503038a7"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.codetech_igw",
            "module.network.aws_route_table.public_route_table",
            "module.network.aws_subnet.subnet_publica",
            "module.network.aws_vpc.codetech_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767485778798:security-group/sg-05e27e8fe170968f7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05e27e8fe170968f7",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/23"
                ],
                "description": "Permite acesso mysql da rede interna",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d846f31e404eb286"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d846f31e404eb286"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "Permite trafego do backend da instancia publica (porta 8081)",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d846f31e404eb286"
                ],
                "self": false,
                "to_port": 8081
              }
            ],
            "name": "terraform-20250515230452671700000002",
            "name_prefix": "terraform-",
            "owner_id": "767485778798",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "codetech-sg-privada"
            },
            "tags_all": {
              "Name": "codetech-sg-privada"
            },
            "timeouts": null,
            "vpc_id": "vpc-0af66dac02f73b954"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.security_public",
            "module.network.aws_vpc.codetech_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767485778798:security-group/sg-0d846f31e404eb286",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d846f31e404eb286",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20250515230448746500000001",
            "name_prefix": "terraform-",
            "owner_id": "767485778798",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "codetech-sg-publica"
            },
            "tags_all": {
              "Name": "codetech-sg-publica"
            },
            "timeouts": null,
            "vpc_id": "vpc-0af66dac02f73b954"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.codetech_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767485778798:subnet/subnet-00138dc22317f2dc5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00138dc22317f2dc5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767485778798",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "codtech-subnet-privada"
            },
            "tags_all": {
              "Name": "codtech-subnet-privada"
            },
            "vpc_id": "vpc-0af66dac02f73b954"
          },
          "dependencies": [
            "module.network.aws_vpc.codetech_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_publica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767485778798:subnet/subnet-00a7b15ea503038a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a7b15ea503038a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767485778798",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "codtech-subnet-publica"
            },
            "tags_all": {
              "Name": "codtech-subnet-publica"
            },
            "vpc_id": "vpc-0af66dac02f73b954"
          },
          "dependencies": [
            "module.network.aws_vpc.codetech_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "codetech_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767485778798:vpc/vpc-0af66dac02f73b954",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/23",
            "default_network_acl_id": "acl-03c21c1d2d19e0b9d",
            "default_route_table_id": "rtb-00affbcdd66fde672",
            "default_security_group_id": "sg-0a16b17c1bff35fb4",
            "dhcp_options_id": "dopt-0576df293bcf0789f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0af66dac02f73b954",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00affbcdd66fde672",
            "owner_id": "767485778798",
            "tags": {
              "Name": "codetech-vpc"
            },
            "tags_all": {
              "Name": "codetech-vpc"
            }
          }
        }
      ]
    }
  ]
}